[gd_scene load_steps=6 format=3 uid="uid://boa4x576b2nlk"]

[ext_resource type="Script" uid="uid://ei5hq472p0h5" path="res://Scripts/Pickups/Magnet.gd" id="1_cww6b"]
[ext_resource type="Shader" uid="uid://dmf4uxkb8ekdt" path="res://Prefabs/Shaders/Pickup.gdshader" id="2_x3wl5"]
[ext_resource type="Texture2D" uid="uid://bkxv0rldjc843" path="res://Art/Pickups/Magnet.png" id="3_cww6b"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rripr"]
resource_local_to_scene = true
shader = ExtResource("2_x3wl5")
shader_parameter/size_effect = 0.1
shader_parameter/speed = 0.5
shader_parameter/highlight_strength = 0.5
shader_parameter/color_mode_toggle = false
shader_parameter/is_horizontal = true

[sub_resource type="CircleShape2D" id="CircleShape2D_cpms5"]

[node name="Magnet" type="Area2D"]
collision_layer = 17
collision_mask = 2
script = ExtResource("1_cww6b")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_rripr")
texture = ExtResource("3_cww6b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cpms5")

[node name="Timer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true
autostart = true

[node name="PollTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="PollTimer" to="." method="_on_poll_timer_timeout"]
